--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "https://jasonrmace.github.io/",
+  "homepage": "https://jasonrmace.github.io/portfolio/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
